# hermes-plugin-teams-voice

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hermes_teams_voice/: README.md  call_session_base.py  call_tools.py  handlers.py  viseme_estimate.py
hermes_teams_voice/tests/: test_call_tools.py  test_integration.py
