[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-teams-voice"
version = "0.1.1"
description = "Microsoft Teams voice/video (Conversational Video Interface) plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Alaaeldin Elhenawy", email = "alaamh@outlook.com" }]
keywords = ["hermes", "hermes-agent", "microsoft-teams", "voice", "cvi", "plugin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Conferencing",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  # Hermes Agent itself is the host runtime (not on PyPI — install via its own
  # installer into the SAME environment). These are the only extra runtime deps.
  "aiohttp>=3.8",
]

[project.urls]
Homepage = "https://github.com/alaamh/hermes-plugin-teams-voice"
Repository = "https://github.com/alaamh/hermes-plugin-teams-voice"
Issues = "https://github.com/alaamh/hermes-plugin-teams-voice/issues"

[project.optional-dependencies]
# Faster audio resampling (pure-Python fallback is used when absent).
numpy = ["numpy>=1.21"]

# Hermes discovers the plugin through this entry-point group. The key (teams_voice)
# is the plugin name shown in `hermes plugins list` / used in plugins.enabled; the
# value is the import package whose register(ctx) Hermes calls.
[project.entry-points."hermes_agent.plugins"]
teams_voice = "hermes_teams_voice"

[tool.setuptools.packages.find]
include = ["hermes_teams_voice*"]

[tool.setuptools.package-data]
hermes_teams_voice = ["plugin.yaml"]
